# disport-data

./: .gitignore  Cargo.toml
data/: met-sites.json
src/: config.rs  main.rs  met.rs  owm.rs  soliscloud.rs  vm.rs
src/soliscloud/: mod.rs
tests/ref/: met-folkes.json  owm-one-call-3.json
tests/ref/soliscloud/: 2024-03-07T12-57-detail-gen.json  2024-03-07T14-27-detail-gen.json  inverterDetail.json  inverterList.json  redact.jq  unitFlip.json  userStationList.json
