[package]
name = "disport-data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
geoutils = "0.5.1"
influxdb = { version = "0.7.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1"
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
