[package]
name = "disport-data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
config = { version = "0.14", features = ["toml"], default-features = false  }
convert_case = "0.6"
geoutils = "0.5.1"
hmac = "0.12"
log = "0.4"
md5 = "0.7"
pretty_env_logger = "0.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1"
serde_path_to_error = "0.1"
sha1 = "0.10"
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
